// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders Table with body 1`] = `
<div>
  <TablePfProvider
    bordered={true}
    className="table-fixed"
    columns={
      Array [
        Object {
          "header": Object {
            "label": "ID",
          },
          "property": "id",
        },
        Object {
          "header": Object {
            "label": "Data",
          },
          "property": "data",
        },
      ]
    }
    components={Object {}}
    condensed={false}
    dataTable={false}
    hover={true}
    inlineEdit={false}
    striped={true}
  >
    <Header
      key="header"
    />
    <TableBody
      columns={
        Array [
          Object {
            "header": Object {
              "label": "ID",
            },
            "property": "id",
          },
          Object {
            "header": Object {
              "label": "Data",
            },
            "property": "data",
          },
        ]
      }
      key="body"
      message="some body message"
      rowKey="id"
      rows={
        Array [
          Object {
            "data": "data-1",
            "id": 1,
          },
          Object {
            "data": "data-2",
            "id": 2,
          },
        ]
      }
    />
  </TablePfProvider>
</div>
`;

exports[`Table renders Table with children 1`] = `
<div>
  <TablePfProvider
    bordered={true}
    className="table-fixed"
    columns={
      Array [
        Object {
          "header": Object {
            "label": "ID",
          },
          "property": "id",
        },
        Object {
          "header": Object {
            "label": "Data",
          },
          "property": "data",
        },
      ]
    }
    components={Object {}}
    condensed={false}
    dataTable={false}
    hover={true}
    inlineEdit={false}
    striped={true}
  >
    some children
  </TablePfProvider>
</div>
`;

exports[`Table renders Table with emptyState 1`] = `
<EmptyState
  empty="state"
/>
`;

exports[`Table renders Table with pagination 1`] = `
<div>
  <TablePfProvider
    bordered={true}
    className="table-fixed"
    columns={
      Array [
        Object {
          "header": Object {
            "label": "ID",
          },
          "property": "id",
        },
        Object {
          "header": Object {
            "label": "Data",
          },
          "property": "data",
        },
      ]
    }
    components={Object {}}
    condensed={false}
    dataTable={false}
    hover={true}
    inlineEdit={false}
    striped={true}
  >
    some children
  </TablePfProvider>
  <PaginationRow
    className=""
    dropdownButtonId="pagination-row-dropdown"
    itemCount={2}
    messages={
      Object {
        "currentPage": "Current Page",
        "firstPage": "First Page",
        "lastPage": "Last Page",
        "nextPage": "Next Page",
        "of": "of",
        "perPage": "per page",
        "previousPage": "Previous Page",
      }
    }
    onChange={[Function]}
    onPageSet={[Function]}
    onPerPageSelect={[Function]}
    pagination={
      Object {
        "page": 1,
        "perPage": 20,
      }
    }
    viewType="table"
  />
</div>
`;
